RESOLVED FIXED294431
[macOS] [Liquid Glass] Safari: tab bar background is the wrong color after toggling dark mode
https://bugs.webkit.org/show_bug.cgi?id=294431
Summary [macOS] [Liquid Glass] Safari: tab bar background is the wrong color after to...
Wenson Hsieh
Reported 2025-06-12 23:43:14 PDT
Attachments
Wenson Hsieh
Comment 1 2025-06-13 00:11:56 PDT
EWS
Comment 2 2025-06-13 10:42:05 PDT
Committed 296199@main (4aa18d17c49c): <https://commits.webkit.org/296199@main> Reviewed commits have been landed. Closing PR #46701 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.